--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ultimate-boilerplate",
   "version": "0.1.0",
   "private": true,
+  "prisma": {
+    "schema": "database/prisma/schema.prisma"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,19 +12,53 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.9.3",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/button": "^2.0.34",
+    "@nextui-org/card": "^2.0.31",
+    "@nextui-org/divider": "^2.0.28",
+    "@nextui-org/input": "^2.2.2",
+    "@nextui-org/react": "^2.4.2",
+    "@prisma/adapter-neon": "^5.15.0",
+    "@prisma/client": "^5.15.0",
+    "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "formik": "^2.4.6",
+    "framer-motion": "^11.2.10",
+    "jsonwebtoken": "^9.0.2",
+    "lucide": "^0.395.0",
+    "lucide-react": "^0.395.0",
+    "moment": "^2.30.1",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "next-transpile-modules": "^10.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "server-only": "^0.0.1",
+    "tailwind-merge": "^2.3.0",
+    "ws": "^8.17.1",
+    "zod": "^3.23.8",
+    "zod-formik-adapter": "^1.3.0",
+    "zod-prisma-types": "1.5.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.5.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "prisma": "^5.15.0",
+    "tailwindcss": "^3.4.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.2"
   }
 }
