feat: on doing auth

--- a/.env
+++ b/.env
@@ -15,3 +15,4 @@ RESET_PASSWORD_EMAIL_TRANSACTIONAL_ID="clxnc1j8a00zu11meubkxukmo"
 MAGIC_LINK_TRANSACTIONAL_ID="clxnikasz00spixjkz6wgafp5"
 
 EMAIL_SECRET_KEY="çpqs8238dokq$l^p"
+AUTH_SECRET="çpqsqsd^qspdqsd"
