--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ RESET_PASSWORD_EMAIL_TRANSACTIONAL_ID=""
 MAGIC_LINK_TRANSACTIONAL_ID=""
 
 # Auth (security)
+AUTH_SECRET=""
 
 # JWT - Là pour généré un token pour qui soit cryptographiquement sûr.
 EMAIL_SECRET_KEY=""
