--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.3.0",
     "@neondatabase/serverless": "^0.9.3",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/button": "^2.0.34",
@@ -34,7 +35,7 @@
     "lucide-react": "^0.395.0",
     "moment": "^2.30.1",
     "next": "14.2.4",
-    "next-auth": "^4.24.7",
+    "next-auth": "5.0.0-beta.19",
     "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18.3.1",
