feat: auth google

--- a/.env
+++ b/.env
@@ -3,6 +3,9 @@ NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 GITHUB_ID="Ov23lierZWV2YvmwOc13"
 GITHUB_SECRET="db15cdbd9d0f4d25188ec05d79a88e0d31117225"
 
+GOOGLE_ID="37447164944-20st7db7jk8lk3abcje2gl3nbafr1qvu.apps.googleusercontent.com"
+GOOGLE_SECRET="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"
+
 POSTGRES_PRISMA_URL="postgres://default:5sgNwD0zPeKv@ep-square-glade-a292mrpn-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
 POSTGRES_URL_NON_POOLING="postgres://default:5sgNwD0zPeKv@ep-square-glade-a292mrpn.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
 
