--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 GITHUB_ID=""
 GITHUB_SECRET=""
 
+GOOGLE_ID=""
+GOOGLE_SECRET=""
+
 # DB - Prisma
 POSTGRES_PRISMA_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 POSTGRES_URL_NON_POOLING="" # Usefull for migrations
