--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "env-config.js"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "env-config.js",
+    "declarations.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
