--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment": "^2.30.1",
     "next": "14.2.4",
     "next-auth": "5.0.0-beta.19",
+    "next-international": "^1.2.4",
     "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-dom": "^18.3.1",
